# llmtop-rs

./: Cargo.toml  README.md
src/: alert.rs  cli.rs  history.rs  lib.rs  log.rs  main.rs
src/sample/: api.rs  ffi.rs  memory.rs  mod.rs  models.rs  process.rs  soc.rs
src/tui/: format.rs  layout.rs  mod.rs  style.rs
src/tui/panes/: active_models.rs  memory.rs  mod.rs  usage.rs
